--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+DATABASE_URL=postgres://user:password@host:port/database
