[add] Location plugin based on PostGIS database [optimize] enable UI i18n of Admin Panel [optimize] update Upstream packages

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 
-DATABASE_URL=postgres://user:password@host:port/database
+DATABASE_CLIENT=postgres
+DATABASE_URL=postgres://postgres:tobemodified@localhost:5432/postgres
