--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3'
 
 services:
   postgres-server:
-    image: postgres
+    image: postgis/postgis
     environment:
       - POSTGRES_PASSWORD=${ADMIN_JWT_SECRET}
     volumes:
-      - ./data:/var/lib/postgresql/data/
+      - ./.data:/var/lib/postgresql/data/
     restart: always
 
   strapi-server:
