[add] Entry Badge of GitHub codespaces & GitPod.io [optimize] enable UI i18n of Admin Panel [fix] some detail bugs of Deployment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-HOST=0.0.0.0
-PORT=1337
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
-DATABASE_URL=postgres://user:password@host:port/database
+ADMIN_JWT_SECRET=tobemodified
+
+# DATABASE_CLIENT=postgres
+# DATABASE_URL=postgres://postgres:tobemodified@localhost:5432/postgres
