[add] GitHub issue forms & repository settings [add] VS Code extensions configuration [fix] some Configuration detail bugs [optimize] update Upstream packages

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 
+SERVER_URL = https://your-strapi-server.com
 # DATABASE_CLIENT=postgres
 # DATABASE_URL=postgres://postgres:tobemodified@localhost:5432/postgres
