--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "@ckeditor/strapi-plugin-ckeditor": "^0.0.10",
-    "@strapi/plugin-color-picker": "4.15.5",
-    "@strapi/plugin-documentation": "4.15.5",
-    "@strapi/plugin-i18n": "4.15.5",
-    "@strapi/plugin-users-permissions": "4.15.5",
-    "@strapi/strapi": "4.15.5",
-    "better-sqlite3": "9.1.1",
+    "@strapi/plugin-color-picker": "4.16.2",
+    "@strapi/plugin-documentation": "4.16.2",
+    "@strapi/plugin-i18n": "4.16.2",
+    "@strapi/plugin-users-permissions": "4.16.2",
+    "@strapi/strapi": "4.16.2",
+    "better-sqlite3": "9.2.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,8 +31,8 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1"
   },
   "prettier": {
     "singleQuote": true
@@ -41,7 +41,7 @@
     "*.{md,json,yml,js,mjs,ts,tsx}": "prettier --write"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky install  ||  true",
     "test": "lint-staged",
     "strapi": "strapi",
     "clean": "rm -rf .cache/ .strapi/ dist/",
