--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
+HOST=0.0.0.0
+PORT=1337
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ADMIN_JWT_SECRET=tobemodified
+ENCRYPTION_KEY=tobemodified
 
 SERVER_URL = https://your-strapi-server.com
 # DATABASE_CLIENT=postgres
