--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -8,9 +8,9 @@ on:
     tags:
       - v*
 env:
-  ARTIFACT_PATH: artifact.tar
-  BOX_NAME: strapi-server
-  BOX_URL: idea2app/strapi-server
+  ARTIFACT_PATH: /tmp/artifact.tar
+  BOX_NAME: ${{ github.event.repository.name }}
+  BOX_URL: ${{ github.repository }}
 
 jobs:
   deploy_docker_image:
@@ -24,33 +24,39 @@ jobs:
 
       - name: Inject Environment variables
         run: |
+          echo "BOX_NAME=${BOX_NAME@L}" >> "${GITHUB_ENV}"
+          echo "BOX_URL=${BOX_URL@L}" >> "${GITHUB_ENV}"
           cat > .env <<EOF
           ${{ secrets.ENV_FILE }}
           EOF
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Build Image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64
           tags: ${{ env.BOX_URL }}:latest
           outputs: type=docker,dest=${{ env.ARTIFACT_PATH }}
+          # use GitHub actions cache
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Pick Docker Compose
         run: |
           mkdir ./build
-          mv ${{ env.ARTIFACT_PATH }} .env ./docker-compose.yml ./start.sh ./build
+          mv ${{ env.ARTIFACT_PATH }} ./docker-compose.yml ./start.sh ./build
 
       - name: Transport Image
-        uses: garygrossgarten/github-action-scp@release
+        uses: appleboy/scp-action@v0.1.7
         with:
-          local: ./build
-          remote: /tmp/${{ env.BOX_NAME }}
+          source: ./build/*.*
+          target: /tmp/${{ env.BOX_NAME }}
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           password: ${{ secrets.SSH_KEY }}
+          strip_components: 1
 
       - name: Run Image
         uses: garygrossgarten/github-action-ssh@release
@@ -60,8 +66,8 @@ jobs:
           password: ${{ secrets.SSH_KEY }}
           command: |
             cd /tmp/${{ env.BOX_NAME }}
-            mkdir -p ~/${{ env.BOX_NAME }}
-            mv .env docker-compose.yml start.sh ~/${{ env.BOX_NAME }}
+            mkdir -p ~/${{ env.BOX_NAME }} 
+            mv docker-compose.yml start.sh ~/${{ env.BOX_NAME }}
             cd ~/${{ env.BOX_NAME }}
             chmod +x start.sh
             echo '${{ secrets.SSH_KEY }}' | sudo -S ./start.sh /tmp/${{ env.BOX_NAME }}/${{ env.ARTIFACT_PATH }}
