--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,6 @@ $RECYCLE.BIN/
 *.sql
 *.sqlite
 *.sqlite3
-.data/
 
 
 ############################
@@ -83,6 +82,8 @@ ssl
 nbproject
 public/uploads/*
 !public/uploads/.gitkeep
+.tsbuildinfo
+.eslintcache
 
 ############################
 # Node.js
@@ -97,6 +98,22 @@ node_modules
 .node_history
 
 ############################
+# Package managers
+############################
+
+package-lock.json
+yarn.lock
+.yarn/*
+!.yarn/cache
+!.yarn/unplugged
+!.yarn/patches
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+yarn-error.log
+
+############################
 # Tests
 ############################
 
@@ -109,9 +126,8 @@ coverage
 .env
 license.txt
 exports
-*.cache
 dist
 build
-.strapi/
-.strapi-updater.json
+.strapi*
+types/generated/
 documentation/
