[add] GitHub action of Type Package publishing [migrate] replace Address Selection field with Location Picker [optimize] use SQLite for development defaultly [optimize] update Upstream packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-pnpm-docker-ts",
+  "name": "@idea2app/strapi-pnpm-docker-ts",
   "version": "0.5.0",
   "private": true,
   "engines": {
@@ -9,28 +9,28 @@
   "dependencies": {
     "@arshiash80/strapi-plugin-iconhub": "^1.0.2",
     "@ckeditor/strapi-plugin-ckeditor": "^1.1.1",
-    "@strapi/plugin-cloud": "~5.13.0",
-    "@strapi/plugin-color-picker": "~5.13.0",
-    "@strapi/plugin-documentation": "~5.13.0",
-    "@strapi/plugin-users-permissions": "~5.13.0",
-    "@strapi/provider-upload-aws-s3": "^5.13.0",
-    "@strapi/strapi": "~5.13.0",
+    "@strapi/plugin-cloud": "~5.15.0",
+    "@strapi/plugin-color-picker": "~5.15.0",
+    "@strapi/plugin-documentation": "~5.15.0",
+    "@strapi/plugin-users-permissions": "~5.15.0",
+    "@strapi/provider-upload-aws-s3": "^5.15.0",
+    "@strapi/strapi": "~5.15.0",
     "better-sqlite3": "^11.10.0",
     "pg": "^8.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
-    "strapi-plugin-address-selection": "^1.0.1",
+    "strapi-location-picker": "^0.0.1",
     "strapi-plugin-multi-select": "^2.1.1",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.15.30",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
     "cross-env": "^7.0.3",
     "husky": "^9.1.7",
-    "lint-staged": "^16.0.0",
+    "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
     "typescript": "~5.8.3"
   },
