[refactor] reduce Dependency Size of Type Package (fix #8)

--- a/.github/workflows/publish-type.yml
+++ b/.github/workflows/publish-type.yml
@@ -26,8 +26,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mv .env.example .env
           pnpm i
-          pnpm strapi ts:generate-types
+          pnpm build
           cd types/
           npm publish
