--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
+    "swagger-typescript-api": "^13.2.0",
     "typescript": "~5.8.3"
   },
   "pnpm": {
@@ -58,6 +59,8 @@
     "strapi": "strapi",
     "clean": "rm -rf .cache/ .strapi/ dist/",
     "develop": "strapi develop",
+    "make-type": "swagger-typescript-api generate -p src/extensions/documentation/documentation/1.0.0/full_documentation.json --extract-enums --modular -o types/client/",
+    "build-type": "rm -rf types/client/  &&  npm run make-type  &&  mv -f types/client/data-contracts.ts types/index.ts  &&  git add types/index.ts",
     "build": "npm run clean  &&  cross-env NODE_ENV=production  strapi build",
     "start": "cross-env NODE_ENV=production  strapi start",
     "pack-image": "docker build -t idea2app/strapi-server .",
