--- a/types/package.json
+++ b/types/package.json
@@ -1,8 +1,5 @@
 {
   "name": "@idea2app/strapi-pnpm-docker-ts",
   "version": "0.5.0",
-  "types": "index.d.ts",
-  "dependencies": {
-    "@strapi/types": "^5.15.0"
-  }
+  "types": "index.ts"
 }
