[refactor] migrate Type Package building from Git hooks to GitHub actions (fix #8)

--- a/.github/workflows/publish-type.yml
+++ b/.github/workflows/publish-type.yml
@@ -26,7 +26,8 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          mv .env.example .env
           pnpm i
-          pnpm build
+          pnpm build-type
           cd types/
           npm publish
