--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
     "@strapi/plugin-color-picker": "~5.15.0",
     "@strapi/plugin-documentation": "~5.15.0",
     "@strapi/plugin-users-permissions": "~5.15.0",
-    "@strapi/provider-upload-aws-s3": "^5.15.0",
     "@strapi/strapi": "~5.15.0",
     "better-sqlite3": "^11.10.0",
+    "cross-env": "^7.0.3",
     "pg": "^8.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0",
+    "react-router-dom": "^6.30.1",
     "strapi-location-picker": "^0.0.1",
     "strapi-plugin-multi-select": "^2.1.1",
+    "strapi-provider-cloudflare-r2": "^0.3.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "@types/node": "^22.15.30",
-    "@types/react": "^18.3.21",
+    "@types/node": "^22.15.31",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "cross-env": "^7.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
-    "swagger-typescript-api": "^13.2.0",
+    "swagger-typescript-api": "^13.2.1",
     "tsx": "^4.19.4",
     "typescript": "~5.8.3",
     "zx": "^8.5.5"
@@ -54,7 +54,7 @@
     "*.{md,json,yml,js,mjs,ts,tsx}": "prettier --write"
   },
   "scripts": {
-    "prepare": "husky || true",
+    "prepare": "(husky || true)  &&  (cp -u .env.example .env || true)",
     "test": "lint-staged",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry",
@@ -63,11 +63,11 @@
     "develop": "strapi develop",
     "make-type": "cd src/extensions/documentation/  &&  tsx make-type documentation/1.0.0/full_documentation.json ../../../types/client/",
     "build-type": "rm -rf types/client/  &&  npm run make-type",
-    "build": "npm run clean  &&  cross-env NODE_ENV=production  strapi build",
+    "build": "npm run clean  &&  strapi ts:generate-types  &&  cross-env NODE_ENV=production  strapi build",
     "start": "cross-env NODE_ENV=production  strapi start",
-    "pack-image": "docker build -t idea2app/strapi-server .",
+    "pack-image": "docker build -t idea2app/strapi-pnpm-docker-ts .",
     "database": "docker rm -f postgres-server  &&  docker run --name postgres-server -v ./.data:/var/lib/postgresql/data/ -e POSTGRES_PASSWORD=tobemodified -p 5432:5432 -d postgres",
-    "container": "docker rm -f strapi-server  &&  docker run --name strapi-server -p 1337:1337 -d idea2app/strapi-server",
+    "container": "docker rm -f strapi-server  &&  docker run --name strapi-server -p 1337:1337 -d idea2app/strapi-pnpm-docker-ts",
     "deploy": "strapi deploy",
     "console": "strapi console"
   }
